Bug 431046 - No globalshortcuts with popup grab
Summary: No globalshortcuts with popup grab
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: wayland-generic (other bugs)
Version First Reported In: git master
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: Andrey
URL: https://invent.kde.org/plasma/kwin/-/...
Keywords: regression, wayland-only
: 438913 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-01-02 03:07 UTC by Toadfield
Modified: 2021-07-23 19:57 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.23
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Toadfield 2021-01-02 03:07:13 UTC
So what I mean is,if some menus are open,hotkeys won't be registered.
To reproduce this:
1.make a hotkey for something
2.go into Dolphin
3.Right click something like "Home"
4.Press the shortcut without doing anything else before

This happens on shortcuts from many different prgrams,so it's definetly Kde's fault.
And it doesn't only happen on Dolphin,but many other programs that have those menus.
Comment 1 Nate Graham 2021-01-04 21:58:00 UTC
I'm afraid this is an unfixable X11 bug: while a menu is open, the X server hands all input to the menu, and menus can't be made to listen to every shortcut.

Fixed already on Wayland.
Comment 2 Toadfield 2021-01-09 20:20:18 UTC
(In reply to Nate Graham from comment #1)
> I'm afraid this is an unfixable X11 bug: while a menu is open, the X server
> hands all input to the menu, and menus can't be made to listen to every
> shortcut.

But how can it be unfixable if it worked some months ago?
Comment 3 Nate Graham 2021-01-09 20:33:40 UTC
This may sound marsh, but... it didn't. :) This has never worked on X11. Menus have always grabbed all input and made global shortcuts not function while they're open.
Comment 4 Toadfield 2021-01-10 12:01:10 UTC
(In reply to Nate Graham from comment #3)
> This may sound marsh, but... it didn't. :) This has never worked on X11.
> Menus have always grabbed all input and made global shortcuts not function
> while they're open.

Oh,I'm dumb,I commented to the wrong issue,I thought this was the issue for a hotkey issue.
Yeah,it never worked for me,I will switch to wayland when it works flawlessly in the future for amd and nvidia gpu's.
Comment 5 Toadfield 2021-01-25 23:55:41 UTC
(In reply to Nate Graham from comment #1)
> I'm afraid this is an unfixable X11 bug: while a menu is open, the X server
> hands all input to the menu, and menus can't be made to listen to every
> shortcut.
> 
> Fixed already on Wayland.

Could it be fixed if I report that bug on the xorg site?
Or will they just don't update it cause it's too bloated?
Comment 6 Nate Graham 2021-01-26 03:10:46 UTC
Xorg isn't developed anymore; all of its developers work on Wayland now. That's one of the many reasons why we all need to work towards moving to Wayland. X11 is abandonware.
Comment 7 Toadfield 2021-06-15 13:35:58 UTC
Will this bug get fixed on wayland soon?
Comment 8 Nate Graham 2021-06-15 14:43:50 UTC
Ah yes, it does seem to be an issue on Wayland still. It's theoretically fixable there, so re-opening.
Comment 9 David Edmundson 2021-06-15 15:11:06 UTC
Have you tested that it didn't work on wayland?
Comment 10 David Edmundson 2021-06-15 15:13:07 UTC
Oh what the hell, it doesn't. 
That's a regression
Comment 11 Nate Graham 2021-06-15 15:13:35 UTC
(In reply to David Edmundson from comment #9)
> Have you tested that it didn't work on wayland?
Yes. :)
Comment 12 David Edmundson 2021-06-15 15:25:58 UTC
PopupInputFilter is above the GlobalShortcutFilter.

Hopefully should be trivial to move.
Comment 13 David Edmundson 2021-06-29 09:40:15 UTC
*** Bug 438913 has been marked as a duplicate of this bug. ***
Comment 14 Andrey 2021-07-23 11:59:52 UTC
I wonder how could it work before, anyway, that's the fix:
https://invent.kde.org/plasma/kwin/-/merge_requests/1187
Comment 15 Andrey 2021-07-23 12:12:48 UTC
Git commit 95e954da300988f001f555046b42a3b1a3337db0 by Andrey Butirsky.
Committed on 23/07/2021 at 12:12.
Pushed by butirsky into branch 'master'.

[tabbox] prevent dangling popups when switching on Wayland

If some popups of active window present, there was glitches on switching
such as stale popups or the popup happened below window.
Dismissing all the popups solves the problem.

M  +4    -0    src/tabbox/tabbox.cpp

https://invent.kde.org/plasma/kwin/commit/95e954da300988f001f555046b42a3b1a3337db0
Comment 16 Andrey 2021-07-23 12:12:56 UTC
Git commit b45f5c3a66d523ad1268222acfcde978d1d1b74e by Andrey Butirsky.
Committed on 23/07/2021 at 12:12.
Pushed by butirsky into branch 'master'.

fix No globalshortcuts with popup grab

M  +3    -1    src/input.cpp

https://invent.kde.org/plasma/kwin/commit/b45f5c3a66d523ad1268222acfcde978d1d1b74e