fix No globalshortcuts with popup grab

BUG: 431046